rename note types to camelCase
