# src/services/note_types.js
@@ -5,13 +5,13 @@ module.exports = [
     'file',
     'image',
     'search',
-    'relation-map',
+    'relationMap',
     'book',
-    'note-map',
+    'noteMap',
     'mermaid',
     'canvas',
-    'web-view',
+    'webView',
     'launcher',
     'doc',
-    'content-widget'
+    'contentWidget'
 ];
